# GameEngine

./: .gitignore  CMakeLists.txt  GameEngine.sln  LICENSE  README.md  mox.lua
app/: imgui.ini
src/EmptyGame/: CMakeLists.txt  EmptyGame.h  EmptyGame.vcxproj  EmptyGame.vcxproj.filters  imgui.ini  main.cpp
src/EngineCore/: CMakeLists.txt  Engine.h  EngineContext.cpp  EngineContext.h  EngineCore.vcxproj  EngineCore.vcxproj.filters  GameBase.cpp  GameBase.h  IGraphics.h  LayerStackManager.cpp  LayerStackManager.h  dummy.cpp
src/EngineWindows/: CMakeLists.txt  EngineWindows.vcxproj  EngineWindows.vcxproj.filters  WinInclude.h  WindowsEngine.cpp  WindowsEngine.h  WindowsWindow.cpp  WindowsWindow.h
src/EngineWindows/D3D12/: D3D12Debug.cpp  D3D12Debug.h  D3D12Graphics.cpp  D3D12Graphics.h  D3D12Imgui.h
src/GameEngine/Core/: BasicLayer.h  EngineContext.cpp  EngineContext.h  GameBase.h  IWindow.h  LayerStackManager.h  build.lua
src/GameEngine/Windows/: ComPointer.h  WinInclude.h  WindowsEngine.cpp  WindowsEngine.h  WindowsWindow.h  build.lua
src/GameEngine/Windows/D3D12/: D3D12Debug.cpp  D3D12Debug.h  D3D12Graphics.cpp  D3D12Graphics.h  D3D12Imgui.cpp  D3D12Imgui.h
src/Games/EmptyGame/: EmptyGame.cpp  EmptyGame.h  build.lua
